--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,10 +1,7 @@
 <mat-card>
-
-	<mat-tab-group>
-		<mat-tab label="Simple Interest">
-			<simple-int></simple-int>
-		</mat-tab>
-		<mat-tab label="Compound Interest">Content 2</mat-tab>
-	</mat-tab-group>
-
+  <mat-tab-group>
+    <mat-tab label="Compound Interest">
+      <simple-int></simple-int>
+    </mat-tab>
+  </mat-tab-group>
 </mat-card>
